--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 zam-*.tar
 
+/rel/
+/config/
+
 # If NPM crashes, it generates a log, let's ignore it too.
 npm-debug.log
 
